--- a/looper.html
+++ b/looper.html
@@ -31,10 +31,11 @@
 </head>
 <body>
     <div id="toolbar" class="clearfix">
-         <div id="show-settings">Show Metronome Options</div>
-         <div id="save">Save Song</div>
+        <div id="show-settings">Show Metronome Options</div>
+        <div id="save">Save Song</div>
     </div>
     <div id="settings">
+        
     </div>
     <div id="canvas-container">
         <div id="start-container">
@@ -47,5 +48,27 @@
         <canvas id="canvas" width="960" height="600"></canvas>
 	</div>
     <script src="js/controls-setup.js" type="text/javascript"></script>
+    <script>
+        var testdata = {
+            "this is": "a test"
+        }
+        //use the button to test shit
+        $('#save').click(function(){
+            console.log("clicked save");
+            $.ajax({
+                type: "POST",
+                url: "http://do.robertvinluan.com:1337/datadump",
+                contentType: "application/json; charset=utf-8",
+                dataType: "json",
+                data: JSON.stringify({"soundobjects": soundObjects}),
+                success: function() {
+                    console.log("success!");
+                },
+                error: function(){
+                    console.log("error");
+                }
+            });
+        })
+    </script>
 </body>
 </html>
