base64 decoding is working! you can now recieve audio back from the server.

--- a/looper.html
+++ b/looper.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
 <!-- Consider specifying the language of your content by adding the `lang` attribute to <html> -->
 <!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
@@ -69,6 +68,28 @@
                 }
             });
         })
+
+        $('body').on('keydown', function(e){
+            if(e.keyCode == 48) {
+                $.ajax({
+                    type: "GET",
+                    url: "http://do.robertvinluan.com:1337/load",
+                    contentType: "application/json; charset=utf-8",
+                    dataType: "json",
+                    success: function(data) {
+                        for(i in data) {
+                            var s = new SoundObject();
+                            s.importFromJSON(data[i]);
+                            console.log(s);
+                            soundObjects.push(s);
+                        }
+                    },
+                    error: function(data) {
+                        console.log("error bro");
+                    }
+                })
+            }
+        });
     </script>
 </body>
 </html>
