--- a/looper.html
+++ b/looper.html
@@ -84,8 +84,10 @@
                     console.log("success!");
                     console.log("id returned: " + data);
                     asc.find('h1').text("Song Saved!");
-                    asc.find('p').text("Here's your unique url: http://localhost:8000/looper.html?s="+data);
-                    asc.find('.button').text("OK");
+                    asc.find('p').text("Here's your unique url: http://robertvinluan.com/songsquares/looper.html?s="+data);
+                    asc.find('.button').text("OK").click(function(){
+                        $(this).hide();
+                    });
                     asc.css({
                         top: (cv.height()/2) - (asc.height()/2),
                         left: (cv.width()/2) - (asc.width()/2)
