--- a/looper.html
+++ b/looper.html
@@ -85,9 +85,9 @@
                     console.log("success!");
                     console.log("id returned: " + data);
                     asc.find('h1').text("Song Saved!");
-                    asc.find('p').text("Here's your unique url: http://robertvinluan.com/songsquares/looper.html?s="+data);
+                    asc.find('p').html("<p>Here's your unique url:</p><p><p>http://robertvinluan.com/songsquares/looper.html?s="+data+"</p>");
                     asc.find('.button').show().text("OK").click(function(){
-                        $(this).hide();
+                        asc.hide();
                     });
                     asc.css({
                         top: (cv.height()/2) - (asc.height()/2),
@@ -95,32 +95,11 @@
                     });
                 },
                 error: function(){
+                    asc.find('p').text("There was an error saving the song. Please try again.")
                     console.log("error");
                 }
             });
         })
-
-        $('body').on('keydown', function(e){
-            if(e.keyCode == 48) { //0
-                $.ajax({
-                    type: "GET",
-                    url: "http://do.robertvinluan.com:1337/load",
-                    contentType: "application/json; charset=utf-8",
-                    dataType: "json",
-                    success: function(data) {
-                        for(i in data) {
-                            var s = new SoundObject();
-                            s.importFromJSON(data[i]);
-                            console.log(s);
-                            soundObjects.push(s);
-                        }
-                    },
-                    error: function(data) {
-                        console.log("error bro");
-                    }
-                })
-            }
-        });
     </script>
 </body>
 </html>
