css centering for all modal windows

--- a/looper.html
+++ b/looper.html
@@ -38,7 +38,7 @@
         
     </div>
     <div id="canvas-container">
-        <div id="blank-start-container">
+        <div id="blank-start-container" class="modal">
             <h1>Welcome!</h1>
             <p>This tool is experimental and still very much in-progress.
                 Pick a tempo and get started!</p>
@@ -46,14 +46,14 @@
             <div id="slider-tempo"></div>
             <div class="start-button" onclick="javascript:startRecording('metronome')" data-mode="metronome">Start recording</div>
         </div>
-        <div id="load-song-start-container">
+        <div id="load-song-start-container" class="modal">
             <h1>Welcome!</h1>
             <p>This tool is experimental and still very much in-progress.
                 You're listening to a song someone created.</p>
             <div class="start-button" onclick="javascript:loadSong()" data-mode="metronome">Play</div>
         </div>
         <canvas id="canvas" width="960" height="600"></canvas>
-        <div id="after-save-container">
+        <div id="after-save-container" class="modal">
             <h1></h1>
             <p>Saving...</p>
             <div class="button"></div>
@@ -62,44 +62,6 @@
     <script src="js/controls-setup.js" type="text/javascript"></script>
     <script src="js/base64.js" type="text/javascript"></script>
     <script>
-        var testdata = {
-            "this is": "a test"
-        }
-        //use the button to test shit
-        $('#save').click(function(){
-            var asc = $("#after-save-container");
-            var cv = $('#canvas');
-            asc.css({
-                top: (cv.height()/2) - (asc.height()/2),
-                left: (cv.width()/2) - (asc.width()/2)
-            });
-            asc.find('.button').hide();
-            asc.show();
-            $.ajax({
-                type: "POST",
-                url: "http://do.robertvinluan.com:1337/datadump",
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
-                data: JSON.stringify(decircularizeAll()),
-                success: function(data) {
-                    console.log("success!");
-                    console.log("id returned: " + data);
-                    asc.find('h1').text("Song Saved!");
-                    asc.find('p').html("<p>Here's your unique url:</p><p><p>http://robertvinluan.com/songsquares/looper.html?s="+data+"</p>");
-                    asc.find('.button').show().text("OK").click(function(){
-                        asc.hide();
-                    });
-                    asc.css({
-                        top: (cv.height()/2) - (asc.height()/2),
-                        left: (cv.width()/2) - (asc.width()/2)
-                    });
-                },
-                error: function(){
-                    asc.find('p').text("There was an error saving the song. Please try again.")
-                    console.log("error");
-                }
-            });
-        })
     </script>
 </body>
 </html>
