added switching of metronome type (not implemented yet)

--- a/looper.html
+++ b/looper.html
@@ -35,7 +35,11 @@
         <div id="save">Save Song</div>
     </div>
     <div id="settings">
-        
+        <h3>Metronome Type:</h3>
+        <label for="audio-metronome">Audio</label>
+        <input id="audio-metronome" type="radio" name="metronome-type" value="audio" checked>
+        <label for="visual-metronome">Visual</label>
+        <input id="visual-metronome" type="radio" name="metronome-type" value="visual">
     </div>
     <div id="canvas-container">
         <div id="blank-start-container" class="modal">
