finished visual metronome

--- a/looper.html
+++ b/looper.html
@@ -32,6 +32,12 @@
 <body>
     <div id="toolbar" class="clearfix">
         <div id="show-settings">Show Metronome Options</div>
+        <div id="visual-metronome-container">
+            <div class="vm-dot tick"></div>
+            <div class="vm-dot tock"></div>
+            <div class="vm-dot tock"></div>
+            <div class="vm-dot tock"></div>
+        </div>
         <div id="save">Save Song</div>
     </div>
     <div id="settings">
