--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 		<p class="subtitle">This is an experiment that uses the Web Audio API and Processing.js to create a unique musical experience.</p>
 		<p class="description">
 			This requires a browser that implements the Web Audio API, and live microphone input.
-			As of this writing, the only browser that supports all of these things is <a href="https://www.google.com/intl/en/chrome/browser/">Google Chrome</a>.
+			As of this writing, the only browser that supports all of these is <a href="https://www.google.com/intl/en/chrome/browser/">Google Chrome</a>.
 		</p>
+		<p>UPDATE: Firefox 25 came out on October 29, 2013. Although this version supports the Web Audio API, I'm still getting playback glitches in that browser. If you're using Firefox 25, be aware that it might not work.
+</p>
 		<p class="web-audio-test-result">Web Audio API support: <span class="result"></span></p>
 		<p class="get-user-media-test-result">Microphone Input support: <span class="result"></span></p>
 		<p class="summation"></p>
