added link to twitter

--- a/looper.html
+++ b/looper.html
@@ -72,8 +72,9 @@
             <div class="start-button" onclick="javascript:loadSong()" data-mode="metronome">Play</div>
         </div>
         <canvas id="canvas" width="960" height="600"></canvas>
+        <a target="_blank"  href="http://www.twitter.com/robertvinluan">Made by @robertvinluan</a>
         <div id="after-save-container" class="modal">
-            <h1></h1>
+            <h1><!-- to be filled with js --></h1>
             <p>Saving...</p>
             <div class="button"></div>
         </div>
